--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="board">
     <div class="row1">
       <div class="square1">
-
+        <span>O</span>
       </div>
       <div class="square2">
 
@@ -26,7 +26,7 @@
 
       </div>
       <div class="square5">
-
+        <span>X</span>
       </div>
       <div class="square6">
       </div>
