--- a/index.html
+++ b/index.html
@@ -9,37 +9,53 @@
 </head>
 
 <body>
-  <div class="board">
-    <div class="row1">
-      <div class="square1">
-
-      </div>
-      <div class="square2">
-
-      </div>
-      <div class="square3">
-
+  <div class="container">
+    <div class="scoreContainer">
+      <p class="player">Player 1</p>
+      <div class="playerScore">
+        <p>Score: </p>
+        <p id="score">0</p>
       </div>
     </div>
-    <div class="row2">
-      <div class="square4">
+    <div class="board">
+      <div class="row1">
+        <div class="square1">
 
-      </div>
-      <div class="square5">
+        </div>
+        <div class="square2">
 
+        </div>
+        <div class="square3">
+
+        </div>
       </div>
-      <div class="square6">
+      <div class="row2">
+        <div class="square4">
+
+        </div>
+        <div class="square5">
+
+        </div>
+        <div class="square6">
+        </div>
+      </div>
+      <div class="row3">
+        <div class="square7">
+
+        </div>
+        <div class="square8">
+
+        </div>
+        <div class="square9">
+
+        </div>
       </div>
     </div>
-    <div class="row3">
-      <div class="square7">
-
-      </div>
-      <div class="square8">
-
-      </div>
-      <div class="square9">
-
+    <div class="scoreContainer">
+      <p class="player">Player 2</p>
+      <div class="playerScore">
+        <p>Score: </p>
+        <p id="score">0</p>
       </div>
     </div>
   </div>
