refactor: update a few CSS class names, add and update styles for elements

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="container">
     <div class="scoreContainer">
-      <p class="player">Player 1</p>
-      <div class="playerScore">
+      <p class="player1">Player 1</p>
+      <div class="playerScore1">
         <p>Score: </p>
         <p id="score">0</p>
       </div>
@@ -52,8 +52,8 @@
       </div>
     </div>
     <div class="scoreContainer">
-      <p class="player">Player 2</p>
-      <div class="playerScore">
+      <p class="player2">Player 2</p>
+      <div class="playerScore2">
         <p>Score: </p>
         <p id="score">0</p>
       </div>
