--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p class="player1">Player 1</p>
       <div class="playerScore1">
         <p>Score: </p>
-        <p id="score">0</p>
+        <p id="score1">0</p>
       </div>
     </div>
     <div class="board">
@@ -55,7 +55,7 @@
       <p class="player2">Player 2</p>
       <div class="playerScore2">
         <p>Score: </p>
-        <p id="score">0</p>
+        <p id="score2">0</p>
       </div>
     </div>
   </div>
